--- a/mysites.html
+++ b/mysites.html
@@ -14,7 +14,7 @@
         <p><a class="link-text1" href="https://mikemoskva.github.io/-8/"><b>Сайт</b></a> магазина фейерверков, CSS-селекторы, файл стилей</p>
       <p><a class="link-text2" href="https://mikemoskva.github.io/lol11/"><b>Сайт</b></a> к игре Gemetry dash</p>
         <p><a class="link-text3" href="https://mikemoskva.github.io/lol1000/"><b>Сайт</b></a> семьи Самойловых, вёрстка по макету, отступы</p>
-        <p>Бонус: <a class="link-text4" href="https://nadvilboa.github.io/-4-3_bonus/"><b>Сайт</b></a> к 9 Мая<br/><a class="link-text5" href="https://mikemoskva.github.io/Kosmos/"><b>Сайт</b> 12 Апреля</a></p>
+        <p>Бонус: <a class="link-text4" href="https://mikemoskva.github.io/9-/"><b>Сайт</b></a> к 9 Мая<br/><a class="link-text5" href="https://mikemoskva.github.io/Kosmos/"><b>Сайт</b> 12 Апреля</a></p>
     </main>
     <footer>
       <a class="social" href=""><img src="https://backoffice.algoritmika.org/uploads/2021/04/social1_0_1618254571.png" width="100px" height="100px"/></a>
